--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,9 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .el-hr{
-	margin-left: 42.5%;
     max-width: 150px;
     height: 2px;
+    margin-left: 43.3%;
     border-top: 1px solid #C2B49A;
     border-bottom: 1px solid #C2B49A;
 }
@@ -186,13 +186,11 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .img-people-caja{
-	margin-right: 10px;
-    margin-left: 10px; 
-}   
+	padding: 30px
+}
 
 .img-people{
-	width: 33.33333333%;
-	height: 350px;
+	margin-bottom: 10px;
 }
 
 .mascara{
@@ -200,37 +198,26 @@ h1,h2,h3,h4,h5,h6{
     z-index: 0.5;
     top: 0;
     left: 15px;
-	width: 350px;
-	height: 350px;
+	width: 100%;
     opacity: 0.5;
     background-color: #222;
-}
-
-.img-people-1{
-	background-image: url(../img/sr-1.jpg);
-	position: relative;
-}
-
-.img-people-2{
-	background-image: url(../img/sr-2.jpg);
-	position: relative;	
-}
-
-.img-people-3{
-	background-image: url(../img/sr-3.jpg);
-	position: relative;	
 }
 
 .img-people-1,
 .img-people-2,
 .img-people-3{
-	width: 350px;
-	height: 350px; 
+	width: 100%;
+	height: 100%; 
+}
+
+.img-people-1 img,
+.img-people-2 img,
+.img-people-3 img{
+	width: 100%;
 	background-repeat: no-repeat;
 	background-position: center;	
 	background-size: cover;	
 }
-
 .text-people{
 	color: white;
 	padding-top: 120px;
@@ -289,7 +276,7 @@ h1,h2,h3,h4,h5,h6{
 	font-size: 50px;
 }
 
-.titulo-press  p{
+.titulo-press p{
 	font-size: 18px;
 	font-weight: 200;
 	padding-bottom: 5px;	 	
@@ -327,14 +314,6 @@ h1,h2,h3,h4,h5,h6{
 
 /*---------*/
 
-.el-hr-3{
-	margin-left: 40%;
-    max-width: 150px;
-    height: 2px;
-    border-top: 1px solid #C2B49A;
-    border-bottom: 1px solid #C2B49A;
-}
-
 .rounded-circle{
 	border-radius: 50%;
 	width: 80px;
@@ -345,6 +324,151 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .cita {
-    font-size: 24px;
+    font-size: 20px;
     text-transform: uppercase;
+}
+
+
+
+/*------------------- SECTION NEWSLETTER -------------------*/
+
+.newsletter{
+	padding: 80px 0;
+	background-color: #191919;
+	color: white;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 50px;
+    padding: 8px 12px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #fff;
+    border-radius: 0;
+}    
+
+.input-group-addon {
+    padding: 6px 35px;
+    font-size: 19px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    color: white;
+    background-color: #B0A083;
+    border: 1px solid #B0A083;
+    border-radius: 0;
+}
+
+
+/*------------------- SECTION HOURS -------------------*/
+
+
+.hours{
+	background-image: url(../img/bg-pricing.jpg);
+	/*background-repeat: no-repeat;	*/
+	color: white;	
+	padding: 50px 0;	
+	
+}
+
+.las-hours{
+	padding: 50px 0;	
+}
+
+.titulo-hours h2{
+	font-size: 50px;
+}
+
+.titulo-hours  p{
+	font-size: 18px;
+	font-weight: 200;
+	padding-bottom: 5px;	 	
+}
+
+.item-caja h3{
+	font-size: 28px;
+	padding-bottom: 5px;
+}
+
+.las-cajas-hours{
+	width: 100%;
+}
+
+.text-caja-hours{
+	width: 100%;
+}
+
+.cajas-hours {
+    color: #000;
+    padding-bottom: 30px;
+    padding-left: 50px;
+}
+
+
+.caja-hora{
+	width: 100%;
+	padding: 30px;
+	height: auto;
+	background-color: #FFFFFF;
+	box-shadow: 3px 3px 20px #000;	
+}
+
+.item-caja ul li div{
+	font-size: 16px;
+	font-weight: 200;
+}
+
+.list-group{
+	margin-top: 10px;
+}
+
+.btn-hours{
+	margin-top: 20px;
+	color: #000;
+	font-weight: 900;
+    padding: 12px 18px;
+    letter-spacing: 1px;
+    border-radius: 0;
+	border: 1px solid #000;
+    background-color: transparent;    
+}
+
+.btn-hours:hover, 
+.btn-hours:focus {
+    color: white;
+    border-color: #C2B49A;
+    background-color: #C2B49A;
+}
+
+
+/*------------------- SECTION MENU -------------------*/
+
+.menu{
+	padding: 80px 0;	
+}
+
+.img-menu img{
+	width: 100%;
+}
+
+.puntos-menu{
+	padding: 20px 0;
+}
+
+.active{
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 5px 7px;
+	opacity: 0.5;
+    opacity: 0.5;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    background: #869791;
 }
