--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ h1,h2,h3,h4,h5,h6{
 
 /* down */
 .savory-down{
-	padding-top: 120px;
+	padding-top: 170px;
 }
 
 .circulo-down{
@@ -142,6 +142,8 @@ h1,h2,h3,h4,h5,h6{
 	background-position: center;	
 	padding: 300px 0;
 	text-align: center;
+    background-attachment: fixed;
+
 }
 
 .frase-great-food{
@@ -373,7 +375,8 @@ h1,h2,h3,h4,h5,h6{
 	/*background-repeat: no-repeat;	*/
 	color: white;	
 	padding: 50px 0;	
-	
+    background-attachment: fixed;
+	background-size: cover;	
 }
 
 .las-hours{
@@ -460,7 +463,7 @@ h1,h2,h3,h4,h5,h6{
 	padding: 20px 0;
 }
 
-.active{
+.circulo-cambio{
     display: inline-block;
     width: 12px;
     height: 12px;
@@ -471,4 +474,68 @@ h1,h2,h3,h4,h5,h6{
     -moz-border-radius: 20px;
     border-radius: 20px;
     background: #869791;
+}
+
+/*------------------- SECTION BUY -------------------*/
+
+.buy{
+	background-color: #1A1A1A;
+	padding: 30px 0;
+}
+
+.texto-buy{
+	font-size: 26px;
+	font-weight: 200;
+	color: white;
+}
+
+.buy:hover{
+	color: white;
+    background-color: #C2B49A;
+    -webkit-transition: all .2s ease-in-out; /*transición cambio color*/
+    -o-transition: all .2s ease-in-out; /*transición cambio color*/
+    transition: all .2s ease-in-out;  /*transición cambio color*/
+}
+
+/*------------------- SECTION FOOTER -------------------*/
+
+.foo{
+	background-image: url(../img/bg-footer.jpg);
+	color: white;	
+	padding: 100px 0 20px 0;	
+    background-attachment: fixed;
+	background-size: cover;
+}
+
+.texto-foo{
+	padding-bottom: 20px;
+}
+
+.texto-foo h4{
+	font-size: 26px;
+	padding-bottom: 4px;
+	opacity: 0.9;	
+}
+
+.texto-foo p{
+	font-size: 20px;
+	opacity: 0.9;
+}
+
+.redes-sociales-footer{
+	padding: 80px 0 40px 0;
+}
+
+.redes-sociales-footer i{
+	color: white;
+	opacity: 0.9;
+}
+
+.footer-final{
+	padding: 20px 0 0 0;	
+	font-weight: 200;
+}
+
+.footer-final p{
+	font-size: 16px;
 }
